# engaging_playbook

./: README.md
example_project/: README.md  pyproject.toml
slurm_scripts/: README.md  browse_run.sh  cpu_run.sh  gpu_run.sh  mit_h200_run.sh
vscode_setup/: ,ssh_config_update.py  README.md  example_ssh_config
